# AgentCI

./: .gitignore  PRODUCT_SCOPE.md  README.md  TECH_SPEC.md  agentci.yaml  pyproject.toml  test.txt
.github/workflows/: agentci.yml
agentci/tests/: create-followup-ticket.json  skip-followup-when-not-blocked.json
docs/: github-action.md
examples/internal_workflow/: agentci.yaml
examples/internal_workflow/adapter/: run_case.py
scripts/: agentci_adapter.py  render_pr_comment.py
src/agentci/: __init__.py  cli.py  config.py  evals.py  loader.py  reporter.py  runner.py  schemas.py  store.py  viewer.py
src/agentci/adapters/: __init__.py  command.py
tests/fixtures/: README.md  intentional-regression.json  regression-agentci.yaml  required-tool-regression.json
tests/unit/: __init__.py  test_cli_run.py  test_evals.py  test_reporter.py  test_view_cli.py
