[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentci"
version = "0.1.0"
description = "CI guardrails for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
agentci = "agentci.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
